--- a/index.css
+++ b/index.css
@@ -231,7 +231,7 @@ p{
   margin: 0px;
   display: flexbox;
   width: 100%;
-  height: 1800px;
+  height: fit-content;
   --color: rgba(114, 114, 114, 0.3);
   background-color: #191a1a;
   background-image: linear-gradient(0deg, transparent 24%, var(--color) 25%, var(--color) 26%, transparent 27%,transparent 74%, var(--color) 75%, var(--color) 76%, transparent 77%,transparent),
@@ -389,4 +389,5 @@ p{
     width: 93vw;
   }
 }
+
 
