--- a/index.css
+++ b/index.css
@@ -8,8 +8,8 @@
 }
 body{
     overflow: hidden;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     z-index: 0;
 }
 .logo{
@@ -33,7 +33,6 @@ nav ul{
 nav ul li{
   cursor: pointer;
   display: inline-block;
-  float: left;
   padding: 5px 10px;
   font-size: 15px; 
   font-weight: 500;
@@ -95,7 +94,7 @@ p{
 }
 .icons{
     margin-left: 10px;
-    bottom: 20px;
+    top: 90vh;
     position: absolute;
 }
 .icons i img{
@@ -107,7 +106,7 @@ p{
   border: 10px solid black;
   background-color: #cacaca;
   position: absolute;
-  bottom: 20px;
+  top: 88vh;
   color: black;
   right: 10px;
   border-radius: 50px;
@@ -244,7 +243,7 @@ p{
   border: 1px solid rgba(100, 100, 100, 1);
   box-shadow: rgba(0, 0, 0, 0.3) 0px 10px 10px -0px;
   backdrop-filter: blur(3px);
-  width: 43%;
+  width: 43vw;
   height: 300px;
   border-radius: 5px;
   margin: 30px;
@@ -327,7 +326,7 @@ p{
   max-width: 90%;
 }
 .experience{
-  width: 96%;
+  width: 96vw;
   height: 600px;
   margin-right: 10px;
   margin-top: 50px;
@@ -338,7 +337,7 @@ p{
   margin-left: 30px;
 }
 .jobcard{
-  width: 95%;
+  width: 88vw;
   height: 100px;
   padding: 20px;
   margin-left: 30px;
@@ -378,9 +377,14 @@ p{
   text-align: center;
 }
 @media only screen and (max-width: 375px ) {
+  .logo{
+    width: 30px;
+    position: relative;
+    top: -5px;
+  }
   .transparent-card{
     width: 80vw;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
     padding-right: 4px;
   }
   .jobcard{
@@ -388,7 +392,58 @@ p{
     font-size: 13px;
     width: 93vw;
   }
+  .background{
+    width: 860px;
+    height: 100vh;
+    transform: rotate(90deg);
+    position: absolute;
+    left: -240px;
+    overflow: hidden;
+  }
+  body{
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    /* padding: 0px; */
+  }
+  .text1{
+    font-size: 25px;
+  }
+  .text2{
+    font-size: 12px;
+    font-weight: 100;
+  }
+  nav{
+    width: 100vw;
+  }
+  nav ul{
+    font-size: 10px;
+  }
+  nav ul li{
+    padding: 2px 8px;
+    font-size: 12px;
+    border: 1px solid black;
+    margin-left: 10px;
+  }
+  .loader{
+    width: 30vw;
+    height: 30vw;
+    top: 65vh;
+  }
+  .one{
+    padding: 5px 10px;
+    font-size: 12px;
+    right: -5px;
+    top: 105vh;
+    border: 4px solid black;
+  }
+  .icons{
+    transform: rotate(90deg);
+    left: -110px;
+    bottom: 40px;
+  }
+  .icons i img{
+    transform: rotate(-90deg);
+  }
 }
-
-
 
